--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <p>This is where your content goes.</p>
+        p><a href="/carLoan/index.html">Learn more about Car Loans</a></p> <!-- Link to the car loan subpage -->
     </main>
 
     <footer>
