--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
     <main>
         p><a href="/carLoan/index.html">Learn more about Car Loans</a></p> <!-- Link to the car loan subpage -->
+        <div class="container">
+            <a href="/carLoan/index.html"> 
+            <div class="box">
+                Car Loan
+            </div>
+            </a>
+            <a href="afford\index.html">
+            <div class="box">How Much Car Can I Afford</div>
+            <a/>
+        </div>
     </main>
 
     <footer>
