carloan image set

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         p><a href="/carLoan/index.html">Learn more about Car Loans</a></p> <!-- Link to the car loan subpage -->
         <div class="container">
             <a href="/carLoan/index.html"> 
-            <div class="box">
+            <div class="loanBox">
                 Car Loan
             </div>
             </a>
             <a href="afford\index.html">
-            <div class="box">How Much Car Can I Afford</div>
+            <div class="affordBox">How Much Car Can I Afford</div>
             </a>
         </div>
     </main>
