Car Loan Text Working

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <a href="/carLoan/index.html"> 
             <div class="loanBox">
-                Car Loan
+                <img src="images/carloan.png" alt="Car Loan Image" class="car-loan-image">
             </div>
             </a>
             <a href="afford\index.html">
