Boxes have text

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="container">
             <a href="/carLoan/index.html"> 
             <div class="loanBox">
-                <img src="images/carloan.png" alt="Car Loan Image" class="car-loan-image">
+                <img src="images/carloan.png" alt="Car Loan Image" class="carLoanImg">
             </div>
             </a>
-            <a href="afford\index.html">
-            <div class="affordBox">How Much Car Can I Afford</div>
+            <div class="affordBox">
+                <img src="images/affordText.png" alt="Affordability Image" class="affordImg">
             </a>
         </div>
     </main>
