--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     </header>
 
     <main>
-        p><a href="/carLoan/index.html">Learn more about Car Loans</a></p> <!-- Link to the car loan subpage -->
         <div class="container">
-            <a href="/carLoan/index.html"> 
+            <a a href="/carLoan/index.html"> 
             <div class="loanBox">
                 <img src="images/carloan.png" alt="Car Loan Image" class="carLoanImg">
             </div>
             </a>
+
+            <a href="/afford/index.html">
             <div class="affordBox">
                 <img src="images/affordText.png" alt="Affordability Image" class="affordImg">
+            </div>
             </a>
         </div>
     </main>
