--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             </div>
             </a>
         </div>
-    </main>
+    </div class = "aboutSection">
+    <img src="images/about us.png">    
+    </div>
+</main>
 
     <footer>
         <p>&copy; 2024 Your Name</p>
