--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>MyBudget</h1 >
+        <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
     </header>
 
     <main>
