--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
+        <div class="header-content">
+            <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
+            <h1 class="header-title">MyBudget</h1>
+        </div>
     </header>
 
     <main>
