--- a/index.html
+++ b/index.html
@@ -3,36 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>Test</title>
     <link rel="stylesheet" href="css/styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <header>
         <div class="header-content">
+            <!-- Logo image for the header -->
             <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
         </div>
     </header>
 
     <main>
         <div class="container">
-            <a a href="/carLoan/index.html"> 
-            <div class="loanBox">
-                <img src="images/carloan.png" alt="Car Loan Image" class="carLoanImg">
-            </div>
+            <!-- Link to the car loan page -->
+            <a href="/carLoan/index.html"> 
+                <div class="loanBox">
+                    <img src="images/carloan.png" alt="Car Loan Image" class="carLoanImg">
+                </div>
             </a>
 
+            <!-- Link to the affordability page -->
             <a href="/afford/index.html">
-            <div class="affordBox">
-                <img src="images/affordText.png" alt="Affordability Image" class="affordImg">
-            </div>
+                <div class="affordBox">
+                    <img src="images/affordText.png" alt="Affordability Image" class="affordImg">
+                </div>
             </a>
         </div>
-    </div class = "aboutSection">
-    <img src="images/about us.png">    
-    </div>
-</main>
+
+        <!-- About section -->
+        <div class="aboutSection">
+            <img src="images/about us.png" alt="About Us">
+        </div>
+    </main>
 
     <footer>
+        <!-- Footer content -->
         <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
