--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 
         <!-- About section -->
         <div class="aboutSection">
-            <img src="images/about us.png" alt="About Us">
+            <img src="images/about us.png" alt="About Us" class="aboutImg">
+            <p>This is the about</p>
         </div>
     </main>
 
     <footer>
         <!-- Footer content -->
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; Auto Loan Calc</p>
     </footer>
 </body>
 </html>
