--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <main>
+        <div class="mainContent">
         <div class="container">
             <!-- Link to the car loan page -->
             <a href="/carLoan/index.html"> 
@@ -30,7 +31,7 @@
                 </div>
             </a>
         </div>
-
+    </div>
         <!-- About section -->
         <div class="aboutSection">
             <img src="images/about us.png" alt="About Us" class="aboutImg">
