--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- About section -->
         <div class="aboutSection">
             <img src="images/about us.png" alt="About Us" class="aboutImg">
-            <p>Welcome to our portfolio website! We are Manpreet Singh and Anurag Vatash, two passionate developers dedicated to crafting innovative and impactful web solutions. With a shared love for technology and a drive to push the boundaries of what's possible, we collaborate on a range of projects that showcase our skills and creativity. Our journey in web development is fueled by continuous learning and a commitment to delivering high-quality work. This portfolio is a reflection of our combined efforts, where we bring together our unique strengths to create something truly special. Explore our work, and join us on this exciting journey of innovation and discovery!</p>
+            <p>Welcome to our website! We are Manpreet Singh and Anurag Vatash, two passionate developers dedicated to crafting innovative and impactful web solutions. With a shared love for technology and a drive to push the boundaries of what's possible, we collaborate on a range of projects that showcase our skills and creativity. Our journey in web development is fueled by continuous learning and a commitment to delivering high-quality work. This portfolio is a reflection of our combined efforts, where we bring together our unique strengths to create something truly special. Explore our work, and join us on this exciting journey of innovation and discovery!</p>
         </div>
     </main>
 
