--- a/carLoan/index.html
+++ b/carLoan/index.html
@@ -35,6 +35,10 @@
         </div>
     </div>
 
+    <footer>
+        <p>&copy; 2024 Auto Finance Calc. All rights reserved.</p>
+    </footer>
+
     <script>
         function calculatePayment() {
             const carPrice = parseFloat(document.getElementById('carPrice').value);
