--- a/carLoan/index.html
+++ b/carLoan/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Payment Calculator</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="css/styles.css"> <!-- Link to CSS file -->
 </head>
 <body>
     <!-- Header Section -->
@@ -12,6 +12,7 @@
         <img src="../images/MainLogo.png" alt="Car Payment Calculator">
     </div>
 
+    <!-- Calculator Box -->
     <div class="calculator-box">
         <h1>Car Payment Calculator</h1>
         <label for="carPrice">Car Price ($):</label>
@@ -35,8 +36,9 @@
         </div>
     </div>
 
+    <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Auto Finance Calc. All rights reserved.</p>
+        <p>&copy; Auto Finance Calc</p>
     </footer>
 
     <script>
