--- a/afford/index.html
+++ b/afford/index.html
@@ -6,7 +6,16 @@
     <title>Car Affordability Calculator</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
+    <header>
+        <div class="header-content">
+            <!-- Logo image for the header -->
+            <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
+        </div>
+    </header>
+    <div id="mainContent">
+    <div id="container">
     <div id="car-affordability-form">
         <h1>Car Affordability Calculator</h1>
         
@@ -25,6 +34,13 @@
         </form>
     
         <p id="result"></p>
+    </div>
+</div>
+</div>
+        <footer>
+            <!-- Footer content -->
+            <p>&copy; Auto Loan Calc</p>
+        </footer>
     </div>
 
     <script>
