--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
 <body>
     <header>
         <div class="header-content">
-            <!-- Logo image for the header -->
-            <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
+            <!-- Logo image for the header, linking to the homepage -->
+            <a href="index.html">
+                <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
+            </a>
         </div>
     </header>
 
     <main>
         <div class="mainContent">
-        <div class="container">
-            <!-- Link to the car loan page -->
-            <a href="/carLoan/index.html"> 
-                <div class="loanBox">
-                    <img src="images/carloan.png" alt="Car Loan Image" class="carLoanImg">
-                </div>
-            </a>
+            <div class="container">
+                <!-- Link to the car loan page -->
+                <a href="/carLoan/index.html"> 
+                    <div class="loanBox">
+                        <img src="images/carloan.png" alt="Car Loan Image" class="carLoanImg">
+                    </div>
+                </a>
 
-            <!-- Link to the affordability page -->
-            <a href="/afford/index.html">
-                <div class="affordBox">
-                    <img src="images/affordText.png" alt="Affordability Image" class="affordImg">
-                </div>
-            </a>
+                <!-- Link to the affordability page -->
+                <a href="/afford/index.html">
+                    <div class="affordBox">
+                        <img src="images/affordText.png" alt="Affordability Image" class="affordImg">
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
         <!-- About section -->
         <div class="aboutSection">
             <img src="images/about us.png" alt="About Us" class="aboutImg">
