sm kind of fix im tired rn forgot

--- a/afford/index.html
+++ b/afford/index.html
@@ -9,8 +9,10 @@
 <body>
     <header>
         <div class="header-content">
-            <!-- Logo image for the header -->
-            <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
+            <!-- Logo image for the header with a link to the homepage -->
+            <a href="http://127.0.0.1:5500/index.html">
+                <img src="images/MainLogo.png" alt="MyBudget Logo" class="header-logo">
+            </a>
         </div>
     </header>
     
