--- a/carLoan/index.html
+++ b/carLoan/index.html
@@ -18,16 +18,16 @@
     <div class="calculator-box">
         <h1>Car Payment Calculator</h1>
         <label for="carPrice">Car Price ($):</label>
-        <input type="number" id="carPrice" placeholder="Enter car price">
+        <input type="text" id="carPrice" placeholder="Enter car price" oninput="formatInput(this)">
 
         <label for="downPayment">Down Payment ($):</label>
-        <input type="number" id="downPayment" placeholder="Enter down payment">
+        <input type="text" id="downPayment" placeholder="Enter down payment" oninput="formatInput(this)">
 
         <label for="apr">APR (%):</label>
-        <input type="number" id="apr" placeholder="Enter annual percentage rate">
+        <input type="text" id="apr" placeholder="Enter annual percentage rate" oninput="formatInput(this)">
 
         <label for="loanTerm">Loan Term (years):</label>
-        <input type="number" id="loanTerm" placeholder="Enter loan term in years">
+        <input type="text" id="loanTerm" placeholder="Enter loan term in years" oninput="formatInput(this)">
 
         <button onclick="calculatePayment()">Calculate</button>
 
@@ -46,9 +46,20 @@
     </footer>
 
     <script>
+        function formatInput(element) {
+            // Remove non-numeric characters except commas
+            let value = element.value.replace(/[^0-9]/g, '');
+            // Convert to number and format with commas
+            if (value !== '') {
+                value = parseFloat(value).toLocaleString('en-US');
+            }
+            element.value = value;
+        }
+
         function calculatePayment() {
-            const carPrice = parseFloat(document.getElementById('carPrice').value);
-            const downPayment = parseFloat(document.getElementById('downPayment').value);
+            // Remove commas and convert to float
+            const carPrice = parseFloat(document.getElementById('carPrice').value.replace(/,/g, ''));
+            const downPayment = parseFloat(document.getElementById('downPayment').value.replace(/,/g, ''));
             const apr = parseFloat(document.getElementById('apr').value) / 100;
             const loanTerm = parseFloat(document.getElementById('loanTerm').value);
 
