--- a/afford/index.html
+++ b/afford/index.html
@@ -22,10 +22,10 @@
                 <h1>Car Affordability Calculator</h1>
                 <form>
                     <label for="income">Annual Income</label>
-                    <input type="number" id="income" name="income" placeholder="Enter your annual income" required>
+                    <input type="text" id="income" name="income" placeholder="Enter your annual income" required oninput="formatInput(this)">
 
                     <label for="downpayment">Down Payment</label>
-                    <input type="number" id="downpayment" name="downpayment" placeholder="Enter your down payment amount" required>
+                    <input type="text" id="downpayment" name="downpayment" placeholder="Enter your down payment amount" required oninput="formatInput(this)">
 
                     <label for="percentage">Percentage of Income for Car Purchase</label>
                     <div id="percentage-container">
@@ -47,6 +47,22 @@
     </footer>
 
     <script>
+        // Format input with commas
+        function formatInput(element) {
+            // Remove non-numeric characters except commas
+            let value = element.value.replace(/[^0-9]/g, '');
+            // Convert to number and format with commas
+            if (value !== '') {
+                value = parseFloat(value).toLocaleString('en-US');
+            }
+            element.value = value;
+        }
+
+        // Remove commas and return numeric value
+        function parseFormattedValue(value) {
+            return parseFloat(value.replace(/,/g, ''));
+        }
+
         // Update the percent display when the range input changes
         var percentageSlider = document.getElementById('percentage');
         var percentDisplay = document.getElementById('percent-display');
@@ -59,8 +75,8 @@
         document.querySelector('#car-affordability-form form').addEventListener('submit', function(event) {
             event.preventDefault();
             
-            var income = parseFloat(document.getElementById('income').value);
-            var downpayment = parseFloat(document.getElementById('downpayment').value);
+            var income = parseFormattedValue(document.getElementById('income').value);
+            var downpayment = parseFormattedValue(document.getElementById('downpayment').value);
             var percentage = parseFloat(document.getElementById('percentage').value) / 100;
             
             if (isNaN(income) || isNaN(downpayment) || isNaN(percentage)) {
@@ -71,9 +87,10 @@
 
             var maxCarPrice = income * percentage + downpayment;
 
-            document.getElementById('result').textContent = "Based on your income and down payment, you can afford a car up to $" + maxCarPrice.toFixed(2);
+            document.getElementById('result').textContent = "Based on your income and down payment, you can afford a car up to $" + maxCarPrice.toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",");
             document.getElementById('result').style.display = 'block'; // Show the result box
         });
     </script>
 </body>
 </html>
+
