--- a/afford/index.html
+++ b/afford/index.html
@@ -38,7 +38,7 @@
 
                 <div id="error" style="display:none; color:red;">Please fill in all fields correctly.</div>
 
-                <div id="resultBox" class="result-box">
+                <div id="resultBox" class="result-box" style="display: none;">
                     <p id="monthlyPayment"></p>
                     <p id="yearlyPayment"></p>
                     <p id="totalPayment"></p>
